[gd_scene load_steps=5 format=2]

[ext_resource path="res://Env/Room0_Env.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rooms/Initial_Room.gd" type="Script" id=3]
[ext_resource path="res://Env/UI.tscn" type="PackedScene" id=5]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Room0_Env" parent="." instance=ExtResource( 1 )]

[node name="player_sprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 824, 864 )
scale = Vector2( 0.389367, 0.400611 )

[node name="UI" parent="." instance=ExtResource( 5 )]

[connection signal="body_entered" from="Room0_Env/climbArea" to="." method="_on_climbArea_body_entered"]
[connection signal="body_exited" from="Room0_Env/climbArea" to="." method="_on_climbArea_body_exited"]
[connection signal="input_event" from="Room0_Env/InteractionObjects" to="." method="_on_InteractionObjects_input_event"]
[connection signal="close_dialog" from="UI/InfoCard" to="." method="_on_InfoCard_close_dialog"]

[editable path="Room0_Env"]
[editable path="UI"]
